this will break everything

--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -91,7 +91,7 @@
     "cell_type": "raw",
     "source": [],
     "metadata": {
-     "collapsed": false
+     "collapsed": falseIMADECHANGESIWANTTHERMUPTHERE
     }
    }
   }
