--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -66,6 +66,89 @@
     "[Markdown]: https://guides.github.com/features/mastering-markdown/\n",
     "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x: x[0] + 3*x[1]},\n",
+    "       {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "       {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (1,1,1,1,1), method='SLSQP', bounds=bnds,\n",
+    "              constraints=cons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.09302326452976"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x: x[0] + 3*x[1]},\n",
+    "       {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "       {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (1,2,3,4,5), method='SLSQP', bounds=bnds,\n",
+    "              constraints=cons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.09302325588931"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.fun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem minimizes to 4.09302326452976 with initial guess x1=x2=x3=x4=x5=1. When switching initial guess to x1=1 x2=2 x3=3 x4=4 x5=5, the problem minimizes to 4.09302325588931. These numbers are nearly, but not exactly, identical. The numbers most likely have a slight difference due to numerical error from numerical solving as it is iteratively solved."
+   ]
   }
  ],
  "metadata": {
@@ -84,15 +167,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
-     "collapsed": falseIMADECHANGESIWANTTHERMUPTHERE
-    }
+     "collapsed": false
+    },
+    "source": []
    }
   }
  },
