--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem minimizes to 4.09302326452976 with initial guess x1=x2=x3=x4=x5=1. When switching initial guess to x1=1 x2=2 x3=3 x4=4 x5=5, the problem minimizes to 4.09302325588931. These numbers are nearly, but not exactly, identical. The numbers most likely have a slight difference due to numerical error from numerical solving as it is iteratively solved."
+    "The problem minimizes to 4.09302326452976 with initial guess x1=x2=x3=x4=x5=1. When switching initial guess to x1=1 x2=2 x3=3 x4=4 x5=5, the problem minimizes to 4.09302325588931. These numbers are nearly, but not exactly, identical. The numbers most likely have a slight difference due to numerical convergence error from numerical solving as it is iteratively solved."
    ]
   }
  ],
