--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -33,6 +33,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6f4c9fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "bad operand type for abs(): 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-8591df809e9c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0msoln\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0msoln\u001b[0m  \u001b[1;31m# print the search trajectory\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: bad operand type for abs(): 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# sample code for Problem 2\n",
+    "\n",
+    "obj = lambda x: (x[0] - 1)**2 + (x[1] + 1)**2  # note that this is 1D. In Prob 2 it should be 2D.\n",
+    "\n",
+    "def grad(x):\n",
+    "    return [2*(x[0] - 1), 2*(x[1] + 1)]\n",
+    "    #this is not correct gradient!\n",
+    "\n",
+    "eps = 1e-3  # termination criterion\n",
+    "x0 = [0., 0.]  # initial guess\n",
+    "k = 0  # counter\n",
+    "soln = [x0]  # use an array to store the search steps\n",
+    "x = soln[k]  # start with the initial guess\n",
+    "error = np.linalg.norm(grad(x))  # compute the error. Note you will need to compute the norm for 2D grads, rather than the absolute value\n",
+    "a = 0.01  # set a fixed step size to start with\n",
+    "\n",
+    "while error >= eps:  # keep searching while gradient norm is larger than eps\n",
+    "    x = x - a*grad(x)\n",
+    "    soln.append(x)\n",
+    "    error = abs(grad(x))\n",
+    "    \n",
+    "soln  # print the search trajectory\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "collected-carbon",
    "metadata": {},
@@ -62,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "moving-prescription",
    "metadata": {},
    "outputs": [
@@ -99,7 +143,7 @@
        " 0.9995766943047821]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
