Finished up question 1

--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -46,82 +46,26 @@
     "\n",
     "---\n",
     "\n",
-    "### Problem 2 (50 points) \n",
-    "\n",
-    "Solve the following problem using Bayesian Optimization:\n",
-    "$$\n",
-    "    \\min_{x_1, x_2} \\quad \\left(4-2.1x_1^2 + \\frac{x_1^4}{3}\\right)x_1^2 + x_1x_2 + \\left(-4 + 4x_2^2\\right)x_2^2,\n",
-    "$$\n",
-    "for $x_1 \\in [-3,3]$ and $x_2 \\in [-2,2]$. A tutorial on Bayesian Optimization can be found [here](https://thuijskens.github.io/2016/12/29/bayesian-optimisation/).\n",
     "\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "divine-setup",
+   "cell_type": "markdown",
+   "id": "2c18f994",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0., -4.], dtype=float32)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# A simple example of using PyTorch for gradient descent\n",
-    "\n",
-    "import torch as t\n",
-    "from torch.autograd import Variable\n",
-    "\n",
-    "# Define a variable, make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
-    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
-    "\n",
-    "# Define a loss\n",
-    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
-    "\n",
-    "# Take gradient\n",
-    "loss.backward()\n",
-    "\n",
-    "# Check the gradient. numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
-    "x.grad.numpy()"
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\min_{A_{12},A_{21}}\\sum_{i=1}^{11} (p(x_i;A_{12},A_{21})-p_i)^2\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "positive-starter",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2., -6.], dtype=float32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Let's examine the gradient at a different x.\n",
-    "x.data = t.tensor([2.0, 1.0])\n",
-    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
-    "loss.backward()\n",
-    "x.grad.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "infectious-remark",
    "metadata": {},
    "outputs": [
@@ -129,54 +73,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.        1.9999971]\n",
-      "8.185452e-12\n"
+      "[1.9584166 1.6891807]\n",
+      "0.67019147\n"
      ]
     }
    ],
    "source": [
-    "# Here is a code for gradient descent without line search\n",
-    "\n",
     "import torch as t\n",
     "from torch.autograd import Variable\n",
     "\n",
-    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
-    "\n",
     "# Fix the step size\n",
-    "a = 0.01\n",
+    "a = 0.001\n",
+    "\n",
+    "# Define a variable, make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
+    "A = Variable(t.tensor([2.0, 1.0]), requires_grad=True)\n",
+    "\n",
+    "# Define a loss\n",
+    "pSatWater = 17.4733\n",
+    "pSatD = 28.8241\n",
+    "pData = t.tensor([28.1, 34.4, 36.7, 36.9, 36.8, 36.7, 36.5, 35.4, 32.9, 27.7, 17.5])\n",
+    "x1 = t.tensor([0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0])\n",
+    "x2 = 1-x1\n",
+    "\n",
     "\n",
     "# Start gradient descent\n",
-    "for i in range(1000):  # TODO: change the termination criterion\n",
-    "    loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
+    "for i in range(10000):  # TODO: change the termination criterion\n",
+    "    \n",
+    "    pEqn = lambda A, x1, x2, pSatD, pSatWater: x1*t.exp(A[0]*(((A[1]*x2)/(A[0]*x1+A[1]*x2))**2))*pSatWater + x2*t.exp(A[1]*(((A[0]*x1)/(A[0]*x1+A[1]*x2))**2))*pSatD\n",
+    "    loss = t.sum((pEqn(A,x1,x2,pSatD,pSatWater)-pData)**2)\n",
     "    loss.backward()\n",
     "    \n",
     "    # no_grad() specifies that the operations within this context are not part of the computational graph, i.e., we don't need the gradient descent algorithm itself to be differentiable with respect to x\n",
     "    with t.no_grad():\n",
-    "        x -= a * x.grad\n",
+    "        A -= a * A.grad\n",
     "        \n",
     "        # need to clear the gradient at every step, or otherwise it will accumulate...\n",
-    "        x.grad.zero_()\n",
+    "        A.grad.zero_()\n",
     "        \n",
-    "print(x.data.numpy())\n",
+    "print(A.data.numpy())\n",
     "print(loss.data.numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "painful-climb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yren32\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f103891",
+   "metadata": {},
+   "source": [
+    "### Problem 2 (50 points) \n",
+    "\n",
+    "Solve the following problem using Bayesian Optimization:\n",
+    "$$\n",
+    "    \\min_{x_1, x_2} \\quad \\left(4-2.1x_1^2 + \\frac{x_1^4}{3}\\right)x_1^2 + x_1x_2 + \\left(-4 + 4x_2^2\\right)x_2^2,\n",
+    "$$\n",
+    "for $x_1 \\in [-3,3]$ and $x_2 \\in [-2,2]$. A tutorial on Bayesian Optimization can be found [here](https://thuijskens.github.io/2016/12/29/bayesian-optimisation/).\n"
+   ]
   }
  ],
  "metadata": {
@@ -195,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
