--- a/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
+++ b/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
@@ -94,10 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "injured-panic",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-aa92fca89016>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# 3. Do not use inplace operations, e.g., x += 1. Please see the following section for an example that does not work.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mDynamics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# define system dynamics\n",
     "# Notes: \n",
@@ -115,9 +127,12 @@
     "    def forward(state, action):\n",
     "\n",
     "        \"\"\"\n",
-    "        action: thrust or no thrust\n",
+    "        action[0]: y thrust\n",
+    "        action[1]: x thrust adding second dimension\n",
     "        state[0] = y\n",
     "        state[1] = y_dot\n",
+    "        state[2] = x  adding second dimension\n",
+    "        state[3] = x_dot adding second dimension\n",
     "        \"\"\"\n",
     "        \n",
     "        # Apply gravity\n",
@@ -125,11 +140,13 @@
     "        # Normally, we would do x[1] = x[1] + gravity * delta_time\n",
     "        # but this is not allowed in PyTorch since it overwrites one variable (x[1]) that is part of the computational graph to be differentiated.\n",
     "        # Therefore, I define a tensor dx = [0., gravity * delta_time], and do x = x + dx. This is allowed... \n",
-    "        delta_state_gravity = t.tensor([0., GRAVITY_ACCEL * FRAME_TIME])\n",
+    "        delta_state_gravity = t.tensor([0., GRAVITY_ACCEL * FRAME_TIME, 0., 0.]) #Gravity only y accel\n",
     "\n",
     "        # Thrust\n",
     "        # Note: Same reason as above. Need a 2-by-1 tensor.\n",
-    "        delta_state = BOOST_ACCEL * FRAME_TIME * t.tensor([0., -1.]) * action\n",
+    "        delta_state = BOOST_ACCEL * FRAME_TIME * t.tensor([0., -1., 0, 1]) * action\n",
+    "        \n",
+    "        #Drag stuff\n",
     "\n",
     "        # Update velocity\n",
     "        state = state + delta_state + delta_state_gravity\n",
@@ -1157,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
