Fixed stupid mistake caused by not running overhead block

--- a/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
+++ b/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "center-trustee",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "induced-midnight",
    "metadata": {},
    "outputs": [],
@@ -94,22 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "injured-panic",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-aa92fca89016>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# 3. Do not use inplace operations, e.g., x += 1. Please see the following section for an example that does not work.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mDynamics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define system dynamics\n",
     "# Notes: \n",
@@ -144,17 +132,17 @@
     "\n",
     "        # Thrust\n",
     "        # Note: Same reason as above. Need a 2-by-1 tensor.\n",
-    "        delta_state = BOOST_ACCEL * FRAME_TIME * t.tensor([0., -1., 0, 1]) * action\n",
+    "        delta_state_y = BOOST_ACCEL * FRAME_TIME * t.tensor([0., -1., 0, 0]) * action[0] #splitting up with tensors\n",
+    "        delta_state_x = BOOST_ACCEL * FRAME_TIME * t.tensor([0., 0., 0., 1]) * action[0]\n",
     "        \n",
     "        #Drag stuff\n",
     "\n",
     "        # Update velocity\n",
-    "        state = state + delta_state + delta_state_gravity\n",
+    "        state = state + delta_state_y + delta_state_gravity + delta_state_x\n",
     "        \n",
     "        # Update state\n",
     "        # Note: Same as above. Use operators on matrices/tensors as much as possible. Do not use element-wise operators as they are considered inplace.\n",
-    "        step_mat = t.tensor([[1., FRAME_TIME],\n",
-    "                            [0., 1.]])\n",
+    "        step_mat = t.tensor([[1., FRAME_TIME, 0., 0.], [0., 1., 0., 0.]], [0., 0., 1., FRAME_TIME], [0., 0., 0., 1.])\n",
     "        state = t.matmul(step_mat, state)\n",
     "\n",
     "        return state"
@@ -162,41 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "rotary-constitutional",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Demonstrate the inplace operation issue\n",
-    "\n",
-    "class Dynamics(nn.Module):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super(Dynamics, self).__init__()\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def forward(state, action):\n",
-    "\n",
-    "        \"\"\"\n",
-    "        action: thrust or no thrust\n",
-    "        state[0] = y\n",
-    "        state[1] = y_dot\n",
-    "        \"\"\"\n",
-    "\n",
-    "        # Update velocity using element-wise operation. This leads to an error from PyTorch.\n",
-    "        state[1] = state[1] + GRAVITY_ACCEL * FRAME_TIME - BOOST_ACCEL * FRAME_TIME * action\n",
-    "        \n",
-    "        # Update state\n",
-    "        step_mat = t.tensor([[1., FRAME_TIME],\n",
-    "                            [0., 1.]])\n",
-    "        state = t.matmul(step_mat, state)\n",
-    "\n",
-    "        return state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "controlling-basement",
    "metadata": {},
    "outputs": [],
