--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -17,8 +17,24 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Find the optimum graphically. Determine directions of feasible descent at the corner points of the feasible domain. Show the gradient directions of $f$ and $g_i$s at these points. Verify graphical results analytically using the KKT conditions.\n",
-    "\n",
+    "Find the optimum graphically. Determine directions of feasible descent at the corner points of the feasible domain. Show the gradient directions of $f$ and $g_i$s at these points. Verify graphical results analytically using the KKT conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96627f00",
+   "metadata": {},
+   "source": [
+    "![Q1-1](HW4img/Q1-1.png)\n",
+    "![Q1-2](HW4img/Q1-2.png)\n",
+    "![Q1-3](HW4img/Q1-3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77610f59",
+   "metadata": {},
+   "source": [
     "### Problem 2 (10 Points)\n",
     "\n",
     "Graph the problem \n",
@@ -30,7 +46,22 @@
     "\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "Find the solution graphically. Then apply the optimality conditions. Can you find a solution based on the optimality conditions? Why? (From Kuhn and Tucker, 1951.)\n",
+    "Find the solution graphically. Then apply the optimality conditions. Can you find a solution based on the optimality conditions? Why? (From Kuhn and Tucker, 1951.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c619a0a8",
+   "metadata": {},
+   "source": [
+    "![Q2](HW4img/Q2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "557901fb",
+   "metadata": {},
+   "source": [
     "\n",
     "### Problem 3 (30 Points)\n",
     "\n",
@@ -43,8 +74,24 @@
     "\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "Use two methods: reduced gradient and Lagrange multipliers.\n",
-    "\n",
+    "Use two methods: reduced gradient and Lagrange multipliers.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de3df7dd",
+   "metadata": {},
+   "source": [
+    "![Q3-1](HW4img/Q3-1.png)\n",
+    "![Q3-2](HW4img/Q3-2.png)\n",
+    "![Q3-3](HW4img/Q3-3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e18c4e3",
+   "metadata": {},
+   "source": [
     "### Problem 4 (20 Points)\n",
     "\n",
     "Use reduced gradient to\tfind the value(s) of the parameter $b$ for which the point $x_1=1$, $x_2=2$ is the solution to the problem \n",
@@ -55,8 +102,22 @@
     "{\\text{subject to }} & \\quad g_1 = x_{1}^{2}+ x_{2}^{2}-5\\leq 0\\\\\n",
     "& \\quad g_2= x_1- x_2-2\\leq 0.\n",
     "\\end{aligned}\n",
-    "$$ \n",
-    "\n",
+    "$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d06a9ba",
+   "metadata": {},
+   "source": [
+    "![Q4](HW4img/Q4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e72002a1",
+   "metadata": {},
+   "source": [
     "### Problem 5 (30 Points)\n",
     "\n",
     "Find the solution for \n",
@@ -71,6 +132,14 @@
     "\n",
     "by implementing the generalized reduced gradient algorithm."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0a175d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -89,15 +158,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
